Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
Few GEM tests - abort - GEM_BUG_ON(engine->sched_engine->queue_priority_hint != (-((int)(~0U >> 1)) - 1))
Dmesg
Scroll to first warning
<6> [82.386244] Console: switching to colour dummy device 80x25
<6> [82.386303] [IGT] gem_create: executing
<7> [82.388308] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<7> [82.388869] i915 0000:00:02.0: [drm:i915_drop_caches_set [i915]] Dropping caches: 0x000001dc [0x000001dc]
<7> [82.389045] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<6> [82.393284] [IGT] gem_create: starting subtest hog-create
<6> [82.393381] [IGT] gem_create: starting dynamic subtest smem0
<7> [114.610776] i915 0000:00:02.0: [drm:i915_drop_caches_set [i915]] Dropping caches: 0x0000005c [0x0000005c]
<3> [114.611271] __engine_park:282 GEM_BUG_ON(engine->sched_engine->queue_priority_hint != (-((int)(~0U >> 1)) - 1))
<0> [114.611334] Dumping ftrace buffer:
<0> [114.611354] ---------------------------------
<0> [114.611452] CPU:4 [LOST 537254 EVENTS]
gem_crea-999 4d.s2. 109546116us : needs_timeslice.part.0: 0000:00:02.0 rcs0: timeslice required for queue
<0> [114.611564] gem_crea-999 4d.s2. 109546116us : __i915_request_submit: 0000:00:02.0 rcs0: fence a3a:19948, current 19945
<0> [114.611647] gem_crea-999 4d.s1. 109546119us : trace_ports: 0000:00:02.0 rcs0: submit { ccid:20 a3a:19948 prio 0 }
<0> [114.611746] gem_crea-999 4..... 109546677us : i915_request_retire.part.0: 0000:00:02.0 bcs0: fence a3b:19944, current 19945
<0> [114.611846] gem_crea-999 4..... 109546698us : __i915_request_commit: 0000:00:02.0 bcs0: fence a3b:19948, current 19945
<0> [114.611928] gem_crea-999 4d.s2. 109546709us : needs_timeslice.part.0: 0000:00:02.0 bcs0: timeslice required for queue
<0> [114.612026] gem_crea-999 4d.s2. 109546710us : __i915_request_submit: 0000:00:02.0 bcs0: fence a3b:19948, current 19945
<0> [114.612108] gem_crea-999 4d.s1. 109546712us : trace_ports: 0000:00:02.0 bcs0: submit { ccid:60000020 a3b:19948 prio 0 }
<0> [114.612206] gem_crea-999 4..... 109547220us : i915_request_retire.part.0: 0000:00:02.0 vcs0: fence a3c:19944, current 19945
<0> [114.612307] gem_crea-999 4..... 109547254us : __i915_request_commit: 0000:00:02.0 vcs0: fence a3c:19948, current 19945
<0> [114.612389] gem_crea-999 4d.s2. 109547265us : needs_timeslice.part.0: 0000:00:02.0 vcs0: timeslice required for queue
<0> [114.612487] gem_crea-999 4d.s2. 109547265us : __i915_request_submit: 0000:00:02.0 vcs0: fence a3c:19948, current 19945
<0> [114.612570] gem_crea-999 4d.s1. 109547268us : trace_ports: 0000:00:02.0 vcs0: submit { ccid:20000020 a3c:19948 prio 0 }
<0> [114.612665] gem_crea-999 4..... 109547743us : i915_request_retire.part.0: 0000:00:02.0 vcs1: fence a3d:19944, current 19945
<0> [114.612761] gem_crea-999 4..... 109547765us : __i915_request_commit: 0000:00:02.0 vcs1: fence a3d:19948, current 19945
<0> [114.612843] gem_crea-999 4d.s2. 109547775us : needs_timeslice.part.0: 0000:00:02.0 vcs1: timeslice required for queue
<0> [114.612938] gem_crea-999 4d.s2. 109547775us : __i915_request_submit: 0000:00:02.0 vcs1: fence a3d:19948, current 19945
<0> [114.613020] gem_crea-999 4d.s1. 109547777us : trace_ports: 0000:00:02.0 vcs1: submit { ccid:20020020 a3d:19948 prio 0 }
<0> [114.613115] gem_crea-999 4..... 109548273us : i915_request_retire.part.0: 0000:00:02.0 vecs0: fence a3e:19944, current 19945